-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 15
-
Component/s: hotspot
-
b25
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8262076 | 13.0.7 | Olga Mikhaltcova | P2 | Resolved | Fixed | b03 |
| JDK-8247551 | 11.0.9-oracle | Qi Ao | P2 | Closed | Fixed | b01 |
| JDK-8248207 | 11.0.9 | Qi Ao | P2 | Resolved | Fixed | b01 |
$ make hotspot CONF=linux-x86_64-minimal-fa
Building target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug'
Updating support/modules_libs/java.base/minimal/libjvm.so due to 1 file(s)
In file included from /home/aoqi/work/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29,
from /home/aoqi/work/jdk/src/hotspot/share/memory/allocation.hpp:28,
from /home/aoqi/work/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/aoqi/work/jdk/src/hotspot/share/precompiled/precompiled.hpp:34,
from /home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:25:
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp: In member function 'void InstanceKlass::add_osr_nmethod(nmethod*)':
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:50: error: 'StressRecompilation' was not declared in this scope
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~~~~~~~~~~~~~~
/home/aoqi/work/jdk/src/hotspot/share/utilities/debug.hpp:56:9: note: in definition of macro 'vmassert'
if (!(p)) { \
^
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:5: note: in expansion of macro 'assert'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:50: note: suggested alternative: 'MethodCompilation'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~~~~~~~~~~~~~~
/home/aoqi/work/jdk/src/hotspot/share/utilities/debug.hpp:56:9: note: in definition of macro 'vmassert'
if (!(p)) { \
^
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:5: note: in expansion of macro 'assert'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~
gmake[3]: *** [lib/CompileJvm.gmk:150: /home/aoqi/work/jdk/build/linux-x86_64-minimal-fastdebug/hotspot/variant-minimal/libjvm/objs/instanceKlass.o] Error 1
gmake[2]: *** [make/Main.gmk:259: hotspot-minimal-libs] Error 2
Building target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug'
Updating support/modules_libs/java.base/minimal/libjvm.so due to 1 file(s)
In file included from /home/aoqi/work/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29,
from /home/aoqi/work/jdk/src/hotspot/share/memory/allocation.hpp:28,
from /home/aoqi/work/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/aoqi/work/jdk/src/hotspot/share/precompiled/precompiled.hpp:34,
from /home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:25:
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp: In member function 'void InstanceKlass::add_osr_nmethod(nmethod*)':
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:50: error: 'StressRecompilation' was not declared in this scope
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~~~~~~~~~~~~~~
/home/aoqi/work/jdk/src/hotspot/share/utilities/debug.hpp:56:9: note: in definition of macro 'vmassert'
if (!(p)) { \
^
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:5: note: in expansion of macro 'assert'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:50: note: suggested alternative: 'MethodCompilation'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~~~~~~~~~~~~~~
/home/aoqi/work/jdk/src/hotspot/share/utilities/debug.hpp:56:9: note: in definition of macro 'vmassert'
if (!(p)) { \
^
/home/aoqi/work/jdk/src/hotspot/share/oops/instanceKlass.cpp:3091:5: note: in expansion of macro 'assert'
assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
^~~~~~
gmake[3]: *** [lib/CompileJvm.gmk:150: /home/aoqi/work/jdk/build/linux-x86_64-minimal-fastdebug/hotspot/variant-minimal/libjvm/objs/instanceKlass.o] Error 1
gmake[2]: *** [make/Main.gmk:259: hotspot-minimal-libs] Error 2
- backported by
-
JDK-8248207 Minimal fastdebug build broken after JDK-8245801
-
- Resolved
-
-
JDK-8262076 Minimal fastdebug build broken after JDK-8245801
-
- Resolved
-
-
JDK-8247551 Minimal fastdebug build broken after JDK-8245801
-
- Closed
-
- relates to
-
JDK-8245801 StressRecompilation triggers assert "redundunt OSR recompilation detected. memory leak in CodeCache!"
-
- Resolved
-
(1 links to)