8246027: Minimal fastdebug build broken after JDK-8245801

Added COMPILER2_PRESENT macro

Reviewed-by: shade, thartmann