src/hotspot/share/oops/instanceKlass.cpp
@@ -3088,7 +3088,7 @@ void InstanceKlass::add_osr_nmethod(nmethod* n) {
 #ifndef PRODUCT
   if (TieredCompilation) {
     nmethod* prev = lookup_osr_nmethod(n->method(), n->osr_entry_bci(), n->comp_level(), true);
-    assert(prev == NULL || !prev->is_in_use() || StressRecompilation,
+    assert(prev == NULL || !prev->is_in_use() COMPILER2_PRESENT(|| StressRecompilation),
            "redundant OSR recompilation detected. memory leak in CodeCache!");
   }
 #endif
